--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h1,
 h3 {
   text-transform: uppercase;
   font-size: 30px;
-  padding: 20px 0;
+  padding: 40px 0;
 }
 
 h2 {
@@ -103,7 +103,6 @@ header,
 }
 
 .main-content {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -203,7 +202,7 @@ header,
   .header-links.open {
     display: flex;
     flex-direction: row;
-    bottom: 5;
+    bottom: 5px;
   }
   #nav-links a {
     font-size: 17px;
@@ -436,7 +435,9 @@ select {
 }
 
 .aboutFengShui {
-  width: 100%;
+  width: calc(100% - 80px);
+  margin-bottom: 40px;
+  margin-top: 40px;
   height: 90%;
   padding: 60px 10%;
   display: flex;
@@ -488,9 +489,10 @@ ul {
 
 .aboutUs {
   position: relative;
-  width: 100%;
-  height: 90%;
-  padding: 60px 10%;
+  padding: 5rem 4rem;
+  margin-bottom: 40px;
+  width: calc(100% - 80px);
+  height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -501,25 +503,23 @@ ul {
 }
 
 .text-aboutUs.shadow-aboutUs {
-  width: 40%;
+  width: 30%;
   height: auto;
   background: rgba(234, 217, 195, 0.5);
   padding: 0 30px;
+  margin-left: 50px;
   color: black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   text-align: justify;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 .bottom {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  margin-top: 20px;
 }
 
 .text-bottom {
@@ -529,18 +529,19 @@ ul {
 }
 
 .logoAboutUs {
-  width: 30%;
-  height: 30% px;
+  width: 40%;
+  height: 40%;
+  opacity: 0.9;
 }
 
 .img-aboutUsWrapper {
   position: absolute;
-  bottom: 70px;
-  right: 10%;
+  bottom: 110px;
+  right: 3%;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 560px;
+  width: 1100px;
 }
 
 .img-aboutUs {
@@ -549,247 +550,33 @@ ul {
   align-items: center;
   justify-content: space-between;
   position: relative;
-  width: 560px;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
   border-bottom: 3px solid #c9a036;
+}
+
+.lotus-aboutUs {
+  width: 67%;
+  height: 67%;
+  opacity: 0.5;
 }
 
 .chinese-labels {
   position: absolute;
-  bottom: 30px;
-  right: 0;
+  bottom: 70px;
+  right: 30px;
   display: flex;
   flex-direction: column;
-  font-size: 48px;
+  font-size: 110px;
   color: black;
   line-height: 1.2;
 }
 
 .img-caption {
-  font-size: 18px;
+  font-size: 35px;
   text-align: center;
+  letter-spacing: 8px;
   margin: 0;
   color: #fff;
   text-transform: uppercase;
   text-align: end;
-}
-
-header,
-.custom-header,
-.custom-footer {
-  position: relative;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.custom-header {
-  min-height: 200px;
-  background: url("../images/napis-header.jpg") no-repeat center;
-  background-size: contain;
-}
-
-.logo-container {
-  padding-left: 20px;
-  display: flex;
-  align-items: center;
-}
-.logo-container img {
-  width: auto;
-  max-width: 80%;
-  height: auto;
-  max-height: 150px;
-  border-radius: 5%;
-}
-
-.header-links {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-.header-links a {
-  margin: 0 20px;
-  color: darkolivegreen;
-  font-weight: bold;
-  font-size: 25px;
-}
-.header-links a:hover {
-  color: #607d8b;
-}
-
-.custom-footer {
-  display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
-}
-
-.main-content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-@media (max-width: 1024px) {
-  .html {
-    overflow-y: auto;
-  }
-  html::-webkit-scrollbar {
-    display: none;
-  }
-  html {
-    scrollbar-width: none;
-    -ms-overflow-style: none; /* IE i Edge */
-  }
-  .header {
-    min-height: 150px;
-  }
-  .header-links {
-    bottom: 5;
-  }
-  .hamburger {
-    display: flex;
-  }
-  #nav-links a {
-    font-size: 25px;
-  }
-  .bg-logo {
-    background: url("../images/grafika2.png") no-repeat;
-    background-position: left 5vw top;
-    background-size: 15% auto;
-  }
-  .aboutFengShui {
-    height: 90%;
-  }
-  .img-Fengshui {
-    margin-right: 50px;
-  }
-  .aboutUs {
-    flex-direction: column;
-    height: auto;
-    padding: 40px 5%;
-  }
-  .text-aboutUs.shadow-aboutUs {
-    width: 90%;
-    font-size: 20px;
-    margin: 10px 0;
-  }
-  .bottom {
-    gap: 10px;
-  }
-  .logoAboutUs {
-    width: 20%;
-    height: 20%;
-  }
-  .img-aboutUsWrapper {
-    position: relative;
-    bottom: auto;
-    right: auto;
-    width: 100%;
-    max-width: 400px;
-    margin: 20px auto 0 auto;
-  }
-  .img-aboutUs {
-    width: 100%;
-    max-width: 400px;
-    padding-bottom: 40px;
-    border-bottom-width: 2px;
-  }
-  .lotus-aboutUs {
-    width: 90%;
-    height: 90%;
-  }
-  .chinese-labels {
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-    font-size: 36px;
-  }
-  .img-caption {
-    font-size: 16px;
-  }
-}
-@media (max-width: 820px) {
-  body {
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .custom-header {
-    min-height: 110px;
-  }
-  .header-links {
-    display: none;
-  }
-  .header-links.open {
-    display: flex;
-    flex-direction: row;
-    bottom: 5;
-  }
-  #nav-links a {
-    font-size: 17px;
-    font-weight: bold;
-    color: darkolivegreen;
-  }
-  .aboutFengShui {
-    width: 100%;
-  }
-  .shadow {
-    width: 100%;
-    flex-direction: column;
-  }
-  .text-Fengshui {
-    font-size: 18px;
-  }
-  .img-Fengshui {
-    margin: 0;
-    justify-content: center;
-  }
-  .text-aboutUs.shadow-aboutUs {
-    font-size: 18px;
-    padding: 10px 15px;
-  }
-  .bottom {
-    gap: 3px;
-  }
-  .logoAboutUs {
-    width: 15%;
-    height: 15%;
-  }
-  .img-aboutUsWrapper {
-    max-width: 300px;
-  }
-  .img-aboutUs {
-    max-width: 300px;
-    padding-bottom: 30px;
-    justify-content: center;
-  }
-  .lotus-aboutUs {
-    width: 70%;
-    height: 70%;
-  }
-  .chinese-labels {
-    font-size: 28px;
-    bottom: 15px;
-  }
-  .img-caption {
-    font-size: 14px;
-  }
-  .button {
-    width: 100%;
-    padding: 14px;
-    font-size: 1.1em;
-  }
-  .add-to-cart {
-    margin: 0;
-    padding: 2px;
-    background-color: #7b4f1d;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 10px;
-  }
 }
