--- a/scss/pages/_aboutFengShui.scss
+++ b/scss/pages/_aboutFengShui.scss
@@ -1,5 +1,7 @@
 .aboutFengShui {
-  width: 100%;
+  width: calc(100% - 80px);
+  margin-bottom: 40px;
+  margin-top: 40px;
   height: 90%;
   padding: 60px 10%;
   display: flex;
