--- a/css/main.css
+++ b/css/main.css
@@ -51,224 +51,6 @@ label {
   font-weight: bold;
 }
 
-header,
-.custom-header,
-.custom-footer {
-  position: relative;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.custom-header {
-  min-height: 200px;
-  background: url("../images/napis-header.jpg") no-repeat center;
-  background-size: contain;
-}
-
-.logo-container {
-  padding-left: 20px;
-  display: flex;
-  align-items: center;
-}
-.logo-container img {
-  width: auto;
-  max-width: 80%;
-  height: auto;
-  max-height: 150px;
-  border-radius: 5%;
-}
-
-.header-links {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-.header-links a {
-  margin: 0 20px;
-  color: darkolivegreen;
-  font-weight: bold;
-  font-size: 25px;
-}
-.header-links a:hover {
-  color: #607d8b;
-}
-
-.custom-footer {
-  display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
-}
-
-.main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-@media (max-width: 1024px) {
-  .html {
-    overflow-y: auto;
-  }
-  html::-webkit-scrollbar {
-    display: none;
-  }
-  html {
-    scrollbar-width: none;
-    -ms-overflow-style: none; /* IE i Edge */
-  }
-  .header {
-    min-height: 150px;
-  }
-  .header-links {
-    bottom: 5;
-  }
-  .hamburger {
-    display: flex;
-  }
-  #nav-links a {
-    font-size: 25px;
-  }
-  .bg-logo {
-    background: url("../images/grafika2.png") no-repeat;
-    background-position: left 5vw top;
-    background-size: 15% auto;
-  }
-  .aboutFengShui {
-    height: 90%;
-  }
-  .img-Fengshui {
-    margin-right: 50px;
-  }
-  .aboutUs {
-    flex-direction: column;
-    height: auto;
-    padding: 40px 5%;
-  }
-  .text-aboutUs.shadow-aboutUs {
-    width: 90%;
-    font-size: 20px;
-    margin: 10px 0;
-  }
-  .bottom {
-    gap: 10px;
-  }
-  .logoAboutUs {
-    width: 20%;
-    height: 20%;
-  }
-  .img-aboutUsWrapper {
-    position: relative;
-    bottom: auto;
-    right: auto;
-    width: 100%;
-    max-width: 400px;
-    margin: 20px auto 0 auto;
-  }
-  .img-aboutUs {
-    width: 100%;
-    max-width: 400px;
-    padding-bottom: 40px;
-    border-bottom-width: 2px;
-  }
-  .lotus-aboutUs {
-    width: 90%;
-    height: 90%;
-  }
-  .chinese-labels {
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-    font-size: 36px;
-  }
-  .img-caption {
-    font-size: 16px;
-  }
-}
-@media (max-width: 820px) {
-  body {
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .custom-header {
-    min-height: 110px;
-  }
-  .header-links {
-    display: none;
-  }
-  .header-links.open {
-    display: flex;
-    flex-direction: row;
-    bottom: 5px;
-  }
-  #nav-links a {
-    font-size: 17px;
-    font-weight: bold;
-    color: darkolivegreen;
-  }
-  .aboutFengShui {
-    width: 100%;
-  }
-  .shadow {
-    width: 100%;
-    flex-direction: column;
-  }
-  .text-Fengshui {
-    font-size: 18px;
-  }
-  .img-Fengshui {
-    margin: 0;
-    justify-content: center;
-  }
-  .text-aboutUs.shadow-aboutUs {
-    font-size: 18px;
-    padding: 10px 15px;
-  }
-  .bottom {
-    gap: 3px;
-  }
-  .logoAboutUs {
-    width: 15%;
-    height: 15%;
-  }
-  .img-aboutUsWrapper {
-    max-width: 300px;
-  }
-  .img-aboutUs {
-    max-width: 300px;
-    padding-bottom: 30px;
-    justify-content: center;
-  }
-  .lotus-aboutUs {
-    width: 70%;
-    height: 70%;
-  }
-  .chinese-labels {
-    font-size: 28px;
-    bottom: 15px;
-  }
-  .img-caption {
-    font-size: 14px;
-  }
-  .button {
-    width: 100%;
-    padding: 14px;
-    font-size: 1.1em;
-  }
-  .add-to-cart {
-    margin: 0;
-    padding: 2px;
-    background-color: #7b4f1d;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 10px;
-  }
-}
 button {
   padding: 12px;
   font-size: 1.1em;
@@ -579,4 +361,211 @@ ul {
   color: #fff;
   text-transform: uppercase;
   text-align: end;
+}
+
+.custom-footer {
+  display: none;
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+}
+
+header,
+.custom-header,
+.custom-footer {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-header {
+  min-height: 200px;
+  background: url("../images/napis-header.jpg") no-repeat center;
+  background-size: contain;
+}
+
+.logo-container {
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+.logo-container img {
+  width: auto;
+  max-width: 80%;
+  height: auto;
+  max-height: 150px;
+  border-radius: 5%;
+}
+
+.header-links {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.header-links a {
+  margin: 0 20px;
+  color: darkolivegreen;
+  font-weight: bold;
+  font-size: 25px;
+}
+.header-links a:hover {
+  color: #607d8b;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 1024px) {
+  .html {
+    overflow-y: auto;
+  }
+  html::-webkit-scrollbar {
+    display: none;
+  }
+  html {
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* IE i Edge */
+  }
+  .header {
+    min-height: 150px;
+  }
+  .header-links {
+    bottom: 5;
+  }
+  .hamburger {
+    display: flex;
+  }
+  #nav-links a {
+    font-size: 25px;
+  }
+  .bg-logo {
+    background: url("../images/grafika2.png") no-repeat;
+    background-position: left 5vw top;
+    background-size: 15% auto;
+  }
+  .aboutFengShui {
+    height: 90%;
+  }
+  .img-Fengshui {
+    margin-right: 50px;
+  }
+  .aboutUs {
+    flex-direction: column;
+    padding: 4rem 2rem;
+    align-items: center;
+  }
+  .text-aboutUs.shadow-aboutUs {
+    width: 80%;
+    font-size: 24px;
+    margin-left: 0;
+    padding: 20px;
+  }
+  .img-aboutUsWrapper {
+    position: relative;
+    width: 80%;
+    bottom: 0;
+    right: 0;
+    margin-top: 40px;
+  }
+  .logoAboutUs {
+    width: 20%;
+    height: 20%;
+  }
+  .img-aboutUs {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+  .lotus-aboutUs {
+    width: 20%;
+    height: auto;
+  }
+  .chinese-labels {
+    bottom: 20px;
+    right: 0;
+    font-size: 80px;
+  }
+  .img-caption {
+    font-size: 24px;
+    text-align: center;
+  }
+}
+@media (max-width: 820px) {
+  body {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .custom-header {
+    min-height: 110px;
+  }
+  .header-links {
+    display: none;
+  }
+  .header-links.open {
+    display: flex;
+    flex-direction: row;
+    bottom: 5px;
+  }
+  #nav-links a {
+    font-size: 17px;
+    font-weight: bold;
+    color: darkolivegreen;
+  }
+  .aboutFengShui {
+    width: 100%;
+  }
+  .shadow {
+    width: 100%;
+    flex-direction: column;
+  }
+  .text-Fengshui {
+    font-size: 18px;
+  }
+  .img-Fengshui {
+    margin: 0;
+    justify-content: center;
+  }
+  .aboutUs {
+    padding: 3rem 1rem;
+  }
+  .text-aboutUs .shadow-aboutUs {
+    font-size: 12px;
+    width: 100%;
+  }
+  .logoAboutUs {
+    width: 50%;
+  }
+  .img-aboutUsWrapper {
+    width: 100%;
+    gap: 5px;
+  }
+  .chinese-labels {
+    font-size: 60px;
+    bottom: 10px;
+    right: 0;
+  }
+  .img-caption {
+    font-size: 18px;
+  }
+  .button {
+    width: 100%;
+    padding: 14px;
+    font-size: 1.1em;
+  }
+  .add-to-cart {
+    margin: 0;
+    padding: 2px;
+    background-color: #7b4f1d;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 10px;
+  }
 }
