--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -37,51 +37,47 @@
   }
   .aboutUs {
     flex-direction: column;
-    height: auto;
-    padding: 40px 5%;
+    padding: 4rem 2rem;
+    align-items: center;
   }
 
   .text-aboutUs.shadow-aboutUs {
-    width: 90%;
-    font-size: 20px;
-    margin: 10px 0;
+    width: 80%;
+    font-size: 24px;
+    margin-left: 0;
+    padding: 20px;
   }
-  .bottom {
-    gap: 10px;
+  .img-aboutUsWrapper {
+    position: relative;
+    width: 80%;
+    bottom: 0;
+    right: 0;
+    margin-top: 40px;
   }
   .logoAboutUs {
     width: 20%;
     height: 20%;
   }
-  .img-aboutUsWrapper {
-    position: relative;
-    bottom: auto;
-    right: auto;
-    width: 100%;
-    max-width: 400px;
-    margin: 20px auto 0 auto;
-  }
 
   .img-aboutUs {
-    width: 100%;
-    max-width: 400px;
-    padding-bottom: 40px;
-    border-bottom-width: 2px;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
   }
   .lotus-aboutUs {
-    width: 90%;
-    height: 90%;
+    width: 20%;
+    height: auto;
   }
 
   .chinese-labels {
-    position: absolute;
     bottom: 20px;
-    right: 10px;
-    font-size: 36px;
+    right: 0;
+    font-size: 80px;
   }
 
   .img-caption {
-    font-size: 16px;
+    font-size: 24px;
+    text-align: center;
   }
 }
 
@@ -128,39 +124,37 @@
     margin: 0;
     justify-content: center;
   }
-  .text-aboutUs.shadow-aboutUs {
-    font-size: 18px;
-    padding: 10px 15px;
+  .aboutUs {
+    padding: 3rem 1rem;
   }
-  .bottom {
-    gap: 3px;
+  .text-aboutUs .shadow-aboutUs {
+    font-size: 12px;
+    width: 100%;
   }
   .logoAboutUs {
-    width: 15%;
-    height: 15%;
+    // width: 15%;
+    // height: 15%;
+    width: 50%;
   }
 
   .img-aboutUsWrapper {
-    max-width: 300px;
+    width: 100%;
+    gap: 5px;
   }
 
-  .img-aboutUs {
-    max-width: 300px;
-    padding-bottom: 30px;
-    justify-content: center;
-  }
-  .lotus-aboutUs {
-    width: 70%;
-    height: 70%;
-  }
+  // .lotus-aboutUs {
+  //   width: 70%;
+  //   height: 70%;
+  // }
   .chinese-labels {
-    font-size: 28px;
-    bottom: 15px;
-    // right: 8px;
+    font-size: 60px;
+    bottom: 10px;
+    right: 0;
   }
 
   .img-caption {
-    font-size: 14px;
+    font-size: 18px;
+    // letter-spacing: 4px;
   }
 
   .button {
