--- a/css/main.css
+++ b/css/main.css
@@ -363,11 +363,6 @@ ul {
   text-align: end;
 }
 
-.custom-footer {
-  display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
-}
-
 header,
 .custom-header,
 .custom-footer {
@@ -421,6 +416,11 @@ header,
   justify-content: center;
 }
 
+.custom-footer {
+  display: none;
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+}
+
 @media (max-width: 1024px) {
   .html {
     overflow-y: auto;
@@ -461,8 +461,8 @@ header,
     align-items: center;
   }
   .text-aboutUs.shadow-aboutUs {
-    width: 80%;
-    font-size: 24px;
+    width: 100%;
+    font-size: 18px;
     margin-left: 0;
     padding: 20px;
   }
@@ -483,20 +483,20 @@ header,
     padding-bottom: 20px;
   }
   .lotus-aboutUs {
-    width: 20%;
+    width: 40%;
     height: auto;
   }
   .chinese-labels {
     bottom: 20px;
     right: 0;
-    font-size: 80px;
+    font-size: 20px;
   }
   .img-caption {
-    font-size: 24px;
+    font-size: 14px;
     text-align: center;
   }
 }
-@media (max-width: 820px) {
+@media (max-width: 819px) {
   body {
     align-items: center;
     justify-content: flex-start;
@@ -538,6 +538,10 @@ header,
     font-size: 12px;
     width: 100%;
   }
+  .text-bottom {
+    letter-spacing: 4px;
+    font-size: 12px;
+  }
   .logoAboutUs {
     width: 50%;
   }
@@ -546,7 +550,7 @@ header,
     gap: 5px;
   }
   .chinese-labels {
-    font-size: 60px;
+    font-size: 30px;
     bottom: 10px;
     right: 0;
   }
