--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -42,8 +42,8 @@
   }
 
   .text-aboutUs.shadow-aboutUs {
-    width: 80%;
-    font-size: 24px;
+    width: 100%;
+    font-size: 18px;
     margin-left: 0;
     padding: 20px;
   }
@@ -65,23 +65,23 @@
     padding-bottom: 20px;
   }
   .lotus-aboutUs {
-    width: 20%;
+    width: 40%;
     height: auto;
   }
 
   .chinese-labels {
     bottom: 20px;
     right: 0;
-    font-size: 80px;
+    font-size: 20px;
   }
 
   .img-caption {
-    font-size: 24px;
+    font-size: 14px;
     text-align: center;
   }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 819px) {
   body {
     align-items: center;
     justify-content: flex-start;
@@ -131,6 +131,10 @@
     font-size: 12px;
     width: 100%;
   }
+  .text-bottom {
+    letter-spacing: 4px;
+    font-size: 12px;
+  }
   .logoAboutUs {
     // width: 15%;
     // height: 15%;
@@ -147,7 +151,7 @@
   //   height: 70%;
   // }
   .chinese-labels {
-    font-size: 60px;
+    font-size: 30px;
     bottom: 10px;
     right: 0;
   }
