--- a/css/main.css
+++ b/css/main.css
@@ -523,13 +523,15 @@ header,
   .shadow {
     width: 100%;
     flex-direction: column;
+    align-items: center;
   }
   .text-Fengshui {
     font-size: 18px;
   }
   .img-Fengshui {
     margin: 0;
-    justify-content: center;
+    margin-bottom: 40px;
+    width: 80%;
   }
   .aboutUs {
     padding: 3rem 1rem;
