--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,7 @@ ul {
   height: auto;
   background: rgba(234, 217, 195, 0.5);
   padding: 0 30px;
-  margin-left: 50px;
+  margin-left: 70px;
   color: black;
   box-sizing: border-box;
   display: flex;
@@ -307,18 +307,18 @@ ul {
 .text-bottom {
   text-transform: uppercase;
   font-family: "Lustria", serif;
-  letter-spacing: 8px;
+  letter-spacing: 10px;
 }
 
 .logoAboutUs {
-  width: 40%;
-  height: 40%;
+  width: 25%;
+  height: 25%;
   opacity: 0.9;
 }
 
 .img-aboutUsWrapper {
   position: absolute;
-  bottom: 110px;
+  bottom: 50px;
   right: 3%;
   display: flex;
   flex-direction: column;
@@ -422,15 +422,13 @@ header,
 }
 
 @media (max-width: 1024px) {
-  .html {
+  html {
     overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* IE i Edge */
   }
   html::-webkit-scrollbar {
     display: none;
-  }
-  html {
-    scrollbar-width: none;
-    -ms-overflow-style: none; /* IE i Edge */
   }
   .header {
     min-height: 150px;
@@ -450,14 +448,14 @@ header,
     background-size: 15% auto;
   }
   .aboutFengShui {
-    height: 90%;
+    width: 100%;
   }
   .img-Fengshui {
     margin-right: 50px;
   }
   .aboutUs {
+    width: 100%;
     flex-direction: column;
-    padding: 4rem 2rem;
     align-items: center;
   }
   .text-aboutUs.shadow-aboutUs {
@@ -517,9 +515,6 @@ header,
     font-weight: bold;
     color: darkolivegreen;
   }
-  .aboutFengShui {
-    width: 100%;
-  }
   .shadow {
     width: 100%;
     flex-direction: column;
@@ -533,31 +528,35 @@ header,
     margin-bottom: 40px;
     width: 80%;
   }
-  .aboutUs {
-    padding: 3rem 1rem;
-  }
   .text-aboutUs .shadow-aboutUs {
     font-size: 12px;
     width: 100%;
   }
+  .bottom {
+    margin-top: 20px;
+  }
   .text-bottom {
-    letter-spacing: 4px;
     font-size: 12px;
   }
   .logoAboutUs {
-    width: 50%;
+    width: 15%;
+    height: 15%;
   }
   .img-aboutUsWrapper {
     width: 100%;
     gap: 5px;
   }
   .chinese-labels {
-    font-size: 30px;
+    flex-direction: row;
+    gap: 8px;
+    font-size: 15px;
     bottom: 10px;
-    right: 0;
+    right: 10px;
+    color: whitesmoke;
   }
   .img-caption {
-    font-size: 18px;
+    font-size: 14px;
+    letter-spacing: 4px;
   }
   .button {
     width: 100%;
