--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -1,14 +1,13 @@
 @media (max-width: 1024px) {
-  .html {
+  html {
     overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* IE i Edge */
   }
   html::-webkit-scrollbar {
     display: none;
   }
-  html {
-    scrollbar-width: none;
-    -ms-overflow-style: none; /* IE i Edge */
-  }
+
   .header {
     min-height: 150px;
   }
@@ -29,15 +28,16 @@
     background-size: 15% auto;
   }
   .aboutFengShui {
-    height: 90%;
+    width: 100%;
+    // height: 90%;
   }
 
   .img-Fengshui {
     margin-right: 50px;
   }
   .aboutUs {
+    width: 100%;
     flex-direction: column;
-    padding: 4rem 2rem;
     align-items: center;
   }
 
@@ -107,10 +107,6 @@
     color: $color-primary;
   }
 
-  .aboutFengShui {
-    width: 100%;
-  }
-
   .shadow {
     width: 100%;
     flex-direction: column;
@@ -126,21 +122,19 @@
     margin-bottom: 40px;
     width: 80%;
   }
-  .aboutUs {
-    padding: 3rem 1rem;
-  }
   .text-aboutUs .shadow-aboutUs {
     font-size: 12px;
     width: 100%;
   }
+  .bottom {
+    margin-top: 20px;
+  }
   .text-bottom {
-    letter-spacing: 4px;
     font-size: 12px;
   }
   .logoAboutUs {
-    // width: 15%;
-    // height: 15%;
-    width: 50%;
+    width: 15%;
+    height: 15%;
   }
 
   .img-aboutUsWrapper {
@@ -153,14 +147,17 @@
   //   height: 70%;
   // }
   .chinese-labels {
-    font-size: 30px;
+    flex-direction: row;
+    gap: 8px;
+    font-size: 15px;
     bottom: 10px;
-    right: 0;
+    right: 10px;
+    color: whitesmoke;
   }
 
   .img-caption {
-    font-size: 18px;
-    // letter-spacing: 4px;
+    font-size: 14px;
+    letter-spacing: 4px;
   }
 
   .button {
