--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -13,6 +13,7 @@
   }
 
   .header-links {
+    display: none;
     bottom: 5;
   }
   .hamburger {
@@ -29,7 +30,6 @@
   }
   .aboutFengShui {
     width: 100%;
-    // height: 90%;
   }
 
   .img-Fengshui {
@@ -70,14 +70,17 @@
   }
 
   .chinese-labels {
+    flex-direction: row;
+    gap: 8px;
     bottom: 20px;
     right: 0;
-    font-size: 20px;
+    font-size: 30px;
+    color: whitesmoke;
   }
 
   .img-caption {
     font-size: 14px;
-    text-align: center;
+    text-align: right;
   }
 }
 
@@ -89,10 +92,6 @@
 
   .custom-header {
     min-height: 110px;
-  }
-
-  .header-links {
-    display: none;
   }
 
   .header-links.open {
@@ -142,22 +141,16 @@
     gap: 5px;
   }
 
-  // .lotus-aboutUs {
-  //   width: 70%;
-  //   height: 70%;
-  // }
   .chinese-labels {
-    flex-direction: row;
-    gap: 8px;
     font-size: 15px;
     bottom: 10px;
     right: 10px;
-    color: whitesmoke;
   }
 
   .img-caption {
     font-size: 14px;
     letter-spacing: 4px;
+    text-align: center;
   }
 
   .button {
