--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   html {
     overflow-y: auto;
     scrollbar-width: none;
@@ -30,6 +30,7 @@
   }
   .aboutFengShui {
     width: 100%;
+    margin-top: 20px;
   }
 
   .img-Fengshui {
@@ -105,7 +106,9 @@
     font-weight: bold;
     color: $color-primary;
   }
-
+  .aboutFengShui {
+    margin-top: 0px;
+  }
   .shadow {
     width: 100%;
     flex-direction: column;
