added shop details modals

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$font-family-main: 'Cormorant Garamond', sans-serif;
+$font-family-main: "Cormorant Garamond", sans-serif;
 $color-text: #333;
 $color-primary: darkolivegreen;
 $color-accent: #c62828;
