--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,6 @@ h1,
 h3 {
   text-transform: uppercase;
   font-size: 30px;
-  padding: 40px 0;
 }
 
 h2 {
@@ -146,6 +145,17 @@ select {
 .product-name p {
   margin: 0;
   font-size: 16px;
+  color: #555;
+}
+
+.more-link {
+  color: #c9a036; /* Zmień kolor tekstu, żeby był widoczny */
+  cursor: pointer;
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+
+.more-link:hover {
   color: #555;
 }
 
