--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,7 +16,7 @@ h1,
 h3 {
   text-transform: uppercase;
   font-size: 30px;
-  padding: 40px 0;
+  // padding: 40px 0;
 }
 h2 {
   text-align: center;
