--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -66,6 +66,16 @@
   font-size: 16px;
   color: #555;
 }
+.more-link {
+  color: $color-highlight; /* Zmień kolor tekstu, żeby był widoczny */
+  cursor: pointer;
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+
+.more-link:hover {
+  color: #555;
+}
 .add-to-cart {
   margin-left: 20px;
   width: 30%;
