added shop details

--- a/scss/pages/_aboutFengShui.scss
+++ b/scss/pages/_aboutFengShui.scss
@@ -22,13 +22,14 @@
 .border-text {
   padding: 20px 0px;
   border-top: 3px solid $color-highlight;
+  margin-top: 20px;
 }
 
 .text-Fengshui {
   flex: 1;
   margin: 20px;
   padding: 0 50px;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
 }
 
