--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ body {
 h1,
 h3 {
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 34px;
 }
 
 h2 {
@@ -229,6 +229,48 @@ select {
   border-radius: 5px;
 }
 
+.dom-subtitle {
+  font-size: 1.8rem;
+  margin-top: 2rem;
+  color: #444;
+}
+
+.dom-paragraph {
+  line-height: 1.75rem;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+.dom-list {
+  padding-left: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.dom-list li {
+  margin-bottom: 0.6rem;
+  font-size: 1.2rem;
+}
+
+.dom-highlight {
+  background-color: #e3f9f6;
+  padding: 1rem;
+  border-left: 4px solid #00a896;
+  border-radius: 8px;
+  margin-top: 1.5rem;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 600px) {
+  .dom-container {
+    padding: 1rem;
+  }
+  .dom-title {
+    font-size: 1.6rem;
+  }
+  .dom-subtitle {
+    font-size: 1.3rem;
+  }
+}
 .aboutFengShui {
   width: calc(100% - 80px);
   margin-bottom: 40px;
@@ -253,13 +295,14 @@ select {
 .border-text {
   padding: 20px 0px;
   border-top: 3px solid #c9a036;
+  margin-top: 20px;
 }
 
 .text-Fengshui {
   flex: 1;
   margin: 20px;
   padding: 0 50px;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
 }
 
