--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@
 @import "components/form";
 @import "components/modal";
 @import "components/hamburger";
-
+@import "components/shopDetails";
 @import "pages/aboutFengShui";
 @import "pages/aboutUs";
 @import "themes/theme";
