--- a/css/main.css
+++ b/css/main.css
@@ -624,6 +624,23 @@ header,
     font-size: 14px;
     text-align: right;
   }
+  .custom-footer {
+    gap: 40px;
+    padding: 20px;
+    text-align: center;
+  }
+  .footer-center {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .footer-right .inline-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .inline-form input,
+  .inline-form button {
+    width: 100%;
+  }
 }
 @media (max-width: 819px) {
   body {
@@ -696,5 +713,20 @@ header,
     border-radius: 6px;
     cursor: pointer;
     font-size: 10px;
+  }
+  .footer-left .logo {
+    height: 100px;
+  }
+  .footer-center {
+    flex-direction: column;
+    gap: 5px;
+    margin-left: 20px;
+  }
+  .social-icon {
+    width: 32px;
+    height: 32px;
+  }
+  .custom-footer {
+    gap: 20px;
   }
 }
