--- a/scss/components/_shopDetails.scss
+++ b/scss/components/_shopDetails.scss
@@ -13,11 +13,16 @@
 .dom-list {
   padding-left: 1.5rem;
   margin-bottom: 1.5rem;
+  list-style: none;
 }
 
 .dom-list li {
   margin-bottom: 0.6rem;
   font-size: 1.2rem;
+}
+.dom-infoList {
+  padding-left: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .dom-highlight {
