commented qimen link

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -78,6 +78,9 @@
   margin: 0 0 6px 0; /* Ustalony odstęp pod spodem */
   font-size: 22px;
 }
+.product-name h3 {
+  font-size: 22px;
+}
 
 .product-name p {
   margin: 0;
