--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -181,6 +181,9 @@
     padding: 14px;
     font-size: 1.1em;
   }
+  .product-name h3 {
+    font-size: 18px;
+  }
 
   .add-to-cart {
     // width: 30%;
