--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,10 @@ select {
   font-size: 22px;
 }
 
+.product-name h3 {
+  font-size: 22px;
+}
+
 .product-name p {
   margin: 0;
   font-size: 16px;
@@ -791,6 +795,9 @@ header,
     width: 100%;
     padding: 14px;
     font-size: 1.1em;
+  }
+  .product-name h3 {
+    font-size: 18px;
   }
   .add-to-cart {
     margin: 0;
