--- a/scss/layout/_footer.css
+++ b/scss/layout/_footer.css
@@ -26,7 +26,7 @@
 .footer-main {
   display: flex;
   gap: 40px;
-  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: flex-end;
   width: 100%;
 }
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
