--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -94,7 +94,7 @@
   }
 }
 
-@media (max-width: 819px) {
+@media (max-width: 750px) {
   body {
     align-items: center;
     justify-content: flex-start;
@@ -190,21 +190,77 @@
     font-size: 10px;
   }
   .custom-footer-content {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
+    padding: 0 20px;
   }
 
   .footer-left {
-    margin-bottom: 0;
+    display: none;
   }
 
   .footer-main {
-    flex-grow: 1;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    width: 100%;
+    max-width: 500px;
+  }
+  .footer-socials {
+    align-items: flex-start;
+    padding-left: 0;
   }
 
   .footer-form {
-    max-width: 500px;
+    max-width: 100%;
+  }
+}
+@media (max-width: 349px) {
+  .custom-footer {
+    padding: 10px;
+  }
+
+  .custom-footer-content {
+    flex-direction: column;
+    padding: 0 10px;
+  }
+
+  .footer-main {
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .footer-socials {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+
+  .social-icon {
+    width: 32px;
+    height: 32px;
+  }
+
+  .inline-form {
+    gap: 8px;
+  }
+
+  .inline-form input,
+  .inline-form button {
+    font-size: 14px;
+    padding: 8px 10px;
+    width: 220px;
+  }
+
+  .inline-form button {
+    height: auto;
+  }
+
+  .footer-left {
+    display: none;
   }
 }
