changed button add to cart

--- a/css/main.css
+++ b/css/main.css
@@ -850,6 +850,7 @@ header,
     font-size: 18px;
   }
   .add-to-cart {
+    width: 30%;
     margin: 0;
     padding: 2px;
     background-color: #7b4f1d;
