--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/shopDetails";
 @import "pages/aboutFengShui";
 @import "pages/aboutUs";
+@import "pages/zodiac";
 @import "themes/theme";
 
 @import "layout/header";
