--- a/scss/pages/_aboutUs.scss
+++ b/scss/pages/_aboutUs.scss
@@ -17,14 +17,13 @@
   width: 30%;
   height: auto;
   background: rgba(234, 217, 195, 0.5);
-  padding: 0 30px;
+  padding: 20px 30px;
   margin-left: 70px;
   color: black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   text-align: justify;
-  // font-family: "Cinzel", serif;
   font-size: 30px;
 }
 
