--- a/scss/pages/zodiac.scss
+++ b/scss/pages/zodiac.scss
@@ -57,18 +57,44 @@
   border-color: $color-highlight;
 }
 .zodiac-back {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 80px;
-  margin: 0 20px;
+  display: block;
+  text-align: right;
+  margin: 40px 80px;
+  font-weight: 600;
+  font-size: 24px;
+  text-decoration: none;
   color: $color-primary;
-  font-weight: bold;
-  font-size: 25px;
 
   &:hover {
     color: #607d8b;
   }
+}
+.zodiac-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 80px;
+  font-size: 45px;
+}
+.zodiac-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.zodiac-images img {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.zodiac-description {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  text-align: justify;
+  padding: 0 1rem;
 }
