--- a/scss/pages/zodiac.scss
+++ b/scss/pages/zodiac.scss
@@ -1,22 +1,3 @@
-.header-zodiac {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 80px;
-
-  a {
-    margin: 0 20px;
-    color: $color-primary;
-    font-weight: bold;
-    font-size: 25px;
-
-    &:hover {
-      color: #607d8b;
-    }
-  }
-}
 .zodiac-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -56,45 +37,113 @@
 .zodiac-item:hover img {
   border-color: $color-highlight;
 }
-.zodiac-back {
-  display: block;
-  text-align: right;
-  margin: 40px 80px;
-  font-weight: 600;
-  font-size: 24px;
-  text-decoration: none;
-  color: $color-primary;
 
-  &:hover {
-    color: #607d8b;
-  }
+.body-rat {
+  width: 100%;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.5); /* półprzezroczysty kolor */
+  padding: 0 80px;
 }
+
+.body-rat::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../../images/zodiacs/ox-logo.png") no-repeat right center;
+  background-size: contain;
+  opacity: 0.2; /* przezroczystość samego obrazu */
+  pointer-events: none;
+}
+
 .zodiac-title {
   display: flex;
-  justify-content: center;
   align-items: center;
+  margin-top: 80px;
   margin-bottom: 80px;
   font-size: 45px;
+  text-transform: none;
 }
-.zodiac-images {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-
-.zodiac-images img {
-  width: 500px;
-  height: 500px;
-  object-fit: cover;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0 auto;
 }
 
-.zodiac-description {
-  font-size: 1.1rem;
-  line-height: 1.6;
-  text-align: justify;
-  padding: 0 1rem;
+th,
+td {
+  padding: 14px 16px;
+  border-bottom: 1px solid #ccc;
+  vertical-align: top;
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+th {
+  background-color: #f5f5f5;
+  text-align: left;
+  font-size: 24px;
+}
+
+.icon {
+  font-weight: bold;
+  display: inline-block;
+  margin-right: 8px;
+  font-size: 16px;
+}
+
+.wood {
+  color: #4caf50;
+}
+.fire {
+  color: #ff5722;
+}
+.earth {
+  color: #9c27b0;
+}
+.metal {
+  color: #607d8b;
+}
+.water {
+  color: #03a9f4;
+}
+
+.sign-name {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.char {
+  line-height: 1.5;
+}
+
+.char span {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.positive {
+  color: #2e7d32;
+}
+.negative {
+  color: #c62828;
+}
+
+.back-zodiac a {
+  font-weight: bold;
+  font-size: 25px;
+  color: $color-primary;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  text-align: right;
+  z-index: 1000;
+}
+
+.header-zodiac a:hover,
+.back-zodiac a:hover {
+  color: $color-highlight;
+  cursor: pointer;
 }
