--- a/scss/pages/zodiac.scss
+++ b/scss/pages/zodiac.scss
@@ -132,6 +132,7 @@ th {
 }
 
 .back-zodiac a {
+  font-family: $font-family-main;
   font-weight: bold;
   font-size: 30px;
   color: $color-primary;
