--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,13 +16,14 @@ h1,
 h3 {
   text-transform: uppercase;
   font-size: 34px;
-  // padding: 40px 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 h2 {
   text-align: center;
   color: $color-accent;
   margin-bottom: 20px;
   font-size: 30px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 label {
