changed padding for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1208,8 +1208,8 @@ header,
   .footer-left {
     display: none;
   }
-  .body-rat {
-    padding: 0 10px;
+  .body-zodiac {
+    padding: 0 20px;
   }
   .back-zodiac a {
     font-size: 15px;
