--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -341,8 +341,8 @@
   .footer-left {
     display: none;
   }
-  .body-rat {
-    padding: 0 10px;
+  .body-zodiac {
+    padding: 0 20px;
   }
   .back-zodiac a {
     font-size: 15px;
