--- a/scss/pages/zodiac.scss
+++ b/scss/pages/zodiac.scss
@@ -60,46 +60,46 @@
   pointer-events: none;
 }
 .body-zodiac[data-sign="rat"]::before {
-  background-image: url("/images/zodiacs/rat-logo.png");
+  background-image: url("../images/zodiacs/rat-logo.png");
 }
 
 .body-zodiac[data-sign="ox"]::before {
-  background-image: url("/images/zodiacs/ox-logo.png");
+  background-image: url("../images/zodiacs/ox-logo.png");
 }
 .body-zodiac[data-sign="dog"]::before {
-  background-image: url("/images/zodiacs/dog-logo.png");
+  background-image: url("../images/zodiacs/dog-logo.png");
 }
 
 .body-zodiac[data-sign="dragon"]::before {
-  background-image: url("/images/zodiacs/dragon-logo.png");
+  background-image: url("../images/zodiacs/dragon-logo.png");
 }
 .body-zodiac[data-sign="goat"]::before {
-  background-image: url("/images/zodiacs/goat-logo.png");
+  background-image: url("../images/zodiacs/goat-logo.png");
 }
 
 .body-zodiac[data-sign="horse"]::before {
-  background-image: url("/images/zodiacs/horse-logo.png");
+  background-image: url("../images/zodiacs/horse-logo.png");
 }
 .body-zodiac[data-sign="monkey"]::before {
-  background-image: url("/images/zodiacs/mokey-logo.png");
+  background-image: url("../images/zodiacs/mokey-logo.png");
 }
 
 .body-zodiac[data-sign="pig"]::before {
-  background-image: url("/images/zodiacs/pig-logo.png");
+  background-image: url("../images/zodiacs/pig-logo.png");
 }
 .body-zodiac[data-sign="rabbit"]::before {
-  background-image: url("/images/zodiacs/rabbit-logo.png");
+  background-image: url("../images/zodiacs/rabbit-logo.png");
 }
 
 .body-zodiac[data-sign="rooster"]::before {
-  background-image: url("/images/zodiacs/rooster-logo.png");
+  background-image: url("../images/zodiacs/rooster-logo.png");
 }
 .body-zodiac[data-sign="snake"]::before {
-  background-image: url("/images/zodiacs/snake-logo.png");
+  background-image: url("../images/zodiacs/snake-logo.png");
 }
 
 .body-zodiac[data-sign="tiger"]::before {
-  background-image: url("/images/zodiacs/tiger-logo.png");
+  background-image: url("../images/zodiacs/tiger-logo.png");
 }
 
 .zodiac-title {
