--- a/css/main.css
+++ b/css/main.css
@@ -741,13 +741,13 @@ th {
 }
 
 .back-zodiac a {
+  position: fixed;
+  right: 100px;
+  bottom: 20px; /* mniejszy odstęp od dołu */
   font-family: "Cormorant Garamond", sans-serif;
   font-weight: bold;
   font-size: 30px;
   color: darkolivegreen;
-  position: absolute;
-  top: 150px;
-  right: 100px;
   text-align: right;
   z-index: 1000;
 }
