--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -151,7 +151,7 @@
   }
   .back-zodiac a {
     font-size: 18px;
-    top: 20px;
+    bottom: 20px;
     right: 20px;
   }
   .zodiac-grid {
@@ -346,8 +346,8 @@
   }
   .back-zodiac a {
     font-size: 15px;
-    top: 10px;
-    right: 10px;
+    bottom: 20px;
+    right: 20px;
   }
   .zodiac-title {
     font-size: 18px;
