--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -127,6 +127,17 @@
   th {
     font-size: 20px;
   }
+  .section-zodiac {
+    width: 85%;
+  }
+
+  .zodiac-name {
+    font-size: 32px;
+  }
+
+  .zodiac-description {
+    font-size: 22px;
+  }
 }
 
 @media (max-width: 750px) {
@@ -186,6 +197,18 @@
 
   th {
     font-size: 16px;
+  }
+  .section-zodiac {
+    width: 90%;
+    margin: 60px auto;
+  }
+
+  .zodiac-name {
+    font-size: 28px;
+  }
+
+  .zodiac-description {
+    font-size: 20px;
   }
   .aboutFengShui {
     margin-top: 0px;
@@ -366,5 +389,18 @@
 
   .body-rat::before {
     background-size: 60%; /* zmniejsz tło na małych ekranach */
+  }
+  .section-zodiac {
+    width: 95%;
+    margin: 40px auto;
+  }
+
+  .zodiac-name {
+    font-size: 24px;
+  }
+
+  .zodiac-description {
+    font-size: 18px;
+    text-align: justify;
   }
 }
